[tool.poetry]
name = "basketball_reference_scraper"
version = "0.1.0"
description = "Package used to scrape game and roster info from basketball-reference.com"
authors = ["Mason Wrolstad <mason@surge.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
requests = "^2.28.2"
lxml = "^4.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
