[tool.poetry]
name = "dunks_and_threes_scraper"
version = "0.1.1"
description = "Package used to scrape stats from dunksandthrees.com"
authors = ["Mason Wrolstad <mason@surge.ai>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "1.3.0"
requests = "2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
